--- a/q03_pairgrid plot.ipynb
+++ b/q03_pairgrid plot.ipynb
@@ -6,7 +6,7 @@
        "metadata": {},
        "outputs": [],
        "source": [
-        "%load q03_plot_innings_runs_histogram/build.py"
+        "%load q03_pairgrid plot/build.py"
 ]
       }
      ],
